--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:server": "cross-env NODE_ENV=production webpack --config webpack/server.prod.js --progress",
     "build:client": "cross-env NODE_ENV=production webpack --config webpack/client.prod.js --progress",
     "start": "cd server && node bin/server.js",
-    "lint": "eslint --ext .jsx,.js ./"
+    "lint": "eslint --ext .jsx,.js,.json ./"
   },
   "keywords": [
     "react",
@@ -27,22 +27,26 @@
   "author": "Mixmax <hello@mixmax.com>",
   "license": "MIT",
   "dependencies": {
+    "bee-queue": "^1.0.0",
+    "body-parser": "^1.17.2",
+    "bull": "^3.2.0",
     "cross-env": "^5.0.5",
     "ejs": "^2.5.7",
     "express": "^4.14.0",
-    "body-parser": "^1.17.2",
+    "font-awesome": "^4.7.0",
+    "jsoneditor": "^5.9.6",
+    "less": "^2.7.2",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.19.3",
     "prop-types": "^15.5.10",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-fontawesome": "^1.6.1",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.0.3",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.5.2",
-    "bee-queue": "^1.0.0",
-    "bull": "^3.2.0",
-    "jsoneditor": "^5.9.6",
-    "lodash": "^4.17.4",
     "tablesort": "^5.0.1"
   },
   "devDependencies": {
@@ -52,7 +56,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.28.7",
-    "eslint": "^4.4.1",
+    "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
