--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,24 @@
 {
     "extends": "airbnb",
     "rules": {
-    "react/jsx-filename-extension": [
-                1,
-                {
-                    "extensions": [
-                        ".js",
-                        ".jsx",
-                        ".json"
-                    ]
-                }
-            ],
-            "react/forbid-prop-types": 0
-        },
-        "env": {
-        "es6": true,
-        "node": true,
-        "browser": true
+        "react/jsx-filename-extension": [
+              1,
+              {
+                  "extensions": [
+                      ".js",
+                      ".jsx",
+                      ".json"
+                  ]
+              }
+        ],
+        "react/forbid-prop-types": 0,
+        "no-underscore-dangle": 0,
+        "class-methods-use-this": 0,
+        "indent": ["error", 4],
+    },
+    "env": {
+      "es6": true,
+      "node": true,
+      "browser": true
     }
 }
