--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
+    "redis": "^2.8.0",
     "redux": "^3.5.2",
     "tablesort": "^5.0.1"
   },
