--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
         "react/forbid-prop-types": 0,
         "no-underscore-dangle": 0,
         "class-methods-use-this": 0,
-        "indent": ["error", 4],
+        "indent": ["warn", 4],
+        "react/jsx-indent": ["warn", 4],
     },
     "env": {
       "es6": true,
