--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
         "react/forbid-prop-types": 0,
         "no-underscore-dangle": 0,
         "class-methods-use-this": 0,
+        "max-len": 0,
         "indent": ["warn", 4],
         "react/jsx-indent": ["warn", 4],
     },
