--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
         "no-underscore-dangle": 0,
         "class-methods-use-this": 0,
         "max-len": 0,
+        "import/no-dynamic-require": 0,
+        "global-require": 0,
         "indent": ["warn", 4],
         "react/jsx-indent": ["warn", 4],
     },
